--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Planograma Mobile Final</title>
+<title>Planograma MEGA</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
 <style>
     :root {
@@ -210,7 +210,7 @@
 
 <header>
     <h1>
-        Planograma Flexível
+        Planograma
         <span class="credits">por: Lucas Coelho, 2025</span>
     </h1>
     <div class="header-btns">
